[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/logo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://CustomTheme.tres" type="Theme" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 45.0
custom_constants/separation = 30

[node name="Logo" type="TextureRect" parent="MainMenu"]
margin_right = 1280.0
margin_bottom = 200.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu"]
margin_left = 490.0
margin_top = 230.0
margin_right = 790.0
margin_bottom = 598.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="MainMenu/MenuOptions"]
margin_right = 300.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 29, 20 )
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../OptionButton")
text = "Start"

[node name="OptionButton" type="Button" parent="MainMenu/MenuOptions"]
margin_top = 93.0
margin_right = 300.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 29, 20 )
text = "Options"

[node name="CreditButton" type="Button" parent="MainMenu/MenuOptions"]
margin_top = 186.0
margin_right = 300.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 29, 20 )
text = "Credit"

[node name="ExitButton" type="Button" parent="MainMenu/MenuOptions"]
margin_top = 279.0
margin_right = 300.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 29, 20 )
text = "Exit"

[connection signal="pressed" from="MainMenu/MenuOptions/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuOptions/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuOptions/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuOptions/ExitButton" to="." method="_on_ExitButton_pressed"]
